--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
@@ -13,7 +13,7 @@
     <script src="/Scripts/plugins/datagrid-detailview.js" type="text/javascript"></script>
     <script type="text/javascript">
         var rownumbers = true, singleSelect = false, ctrlSelect = true, multiSort = false, pageSize = 25;
-        var grid, frozenColumns = [[]], columns = [[]], filterData = [], enableFilterData = false, editIndex = undefined, columnMenu = undefined;
+        var grid, frozenColumns = [[]], columns = [[]], filterData = [], enableFilterData = true, editIndex = undefined, columnMenu = undefined;
 
         var startfunction = function () {
         };
