--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Roles/Role2User.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Roles/Role2User.cshtml
@@ -1,8 +1,8 @@
 ﻿@using System.Web.UI.WebControls
 @{
     Layout = null;
-    ViewBag.GetRoles = Url.Action("GetRoles");
-    ViewBag.EditUser2Role = Url.Action("EditUser2Role");
+    ViewBag.GetRoles = Url.Action("GetUsers");
+    ViewBag.EditUser2Role = Url.Action("EditRole2User");
 }
 <html>
 <head>
