--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="easyui-layout" data-options="fit:true">
     <div data-options="region:'north', height:50" style="padding: 10px;">
         <span style="font-size: 18px;">Mes后台管理系统</span>
-        <a href="/" target="_blank">返回首页</a>
+        <a href="/Admin/Home/Login" target="_blank">返回登录页面</a>
     </div>
     <div data-options="region:'west', split:true, minWidth:100, width:150, title:'导航菜单'">
         <div id="main-nav" class="easyui-accordion" data-options="fit:true, border:false, selected:true">
