--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Login.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Login.cshtml
@@ -1,55 +1,47 @@
-﻿@{
-    ViewBag.Login = Url.Action("LoginResult");
-}
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Custom TextBox - jQuery EasyUI Demo</title>
-    <link rel="stylesheet" type="text/css" href="/Content/themes/default/easyui.css">
-    <link rel="stylesheet" type="text/css" href="/Content/themes/icon.css">
-    
-    <script type="text/javascript" src="/Scripts/jquery-1.11.1.js"></script>
-    <script type="text/javascript" src="/Scripts/jquery.easyui-1.4.1.js"></script>
-</head>
-<body>
-    <h2>Custom TextBox</h2>
-    <p>This example shows how to custom a login form.</p>
-    <div style="margin:20px 0;"></div>
-    <div class="easyui-panel" title="Login to system" style="width:400px;padding:30px 70px 20px 70px">
-        <form>
-            <div style="margin-bottom:10px">
-                <input id="username" class="easyui-textbox" style="width:100%;height:40px;padding:12px" data-options="prompt:'Username',iconCls:'icon-man',iconWidth:38">
-            </div>
-            <div style="margin-bottom:20px">
-                <input id="password" class="easyui-textbox" type="password" style="width:100%;height:40px;padding:12px" data-options="prompt:'Password',iconCls:'icon-lock',iconWidth:38">
-            </div>
-            <div style="margin-bottom:20px">
-                <input type="checkbox" checked="checked">
-                <span>Remember me</span>
-            </div>
-            <div>
-                <a class="easyui-linkbutton" id="save" data-options="iconCls:'icon-ok'" style="padding:5px 0px;width:100%;">
-                    <span style="font-size:14px;">Login</span>
-                </a>
-            </div>
-        </form>
-    </div>
-   
-    <script>
-        $('#save').bind('click', submitEdits);
-        function ajaxResultHandler(data) {
-            if (data.Type == "Success") {
+﻿@model Mes.Demo.Dtos.Identity.UserDto
 
-            }
-            if (data.Type == "Error") {
-                $.Mes.easyui.msg.error(data.Content);
-            } else {
-                $.Mes.easyui.msg.tip(data.Content);
-            }
-        }
-        function submitEdits(objs) {
-            $.post("@ViewBag.Login", { username: $('#username').textbox('getText'), password: $('#password').textbox('getText') });
-        }
-    </script>
-</body>
-</html>
+@{
+    ViewBag.Title = "View1";
+}
+
+<h2>View1</h2>
+
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>User</h4>
+        <hr />
+        @Html.ValidationSummary(true)
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, new { @class = "form-control", placeholder = "Enter your username" ,type="password" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
+
+<script src="~/Scripts/jquery-1.11.1.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+
