--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
@@ -58,7 +58,7 @@
           
             var row = grid.datagrid("getSelected");
             var time = row.ProblemTime;
-            $(".datagrid-cell-c1-Id").attr("test_time", time);
+            $("#grid-@ViewBag.GridId").attr("test_time", time);
             console.debug("time:" + time);
             @if (toolbarItem == null || !toolbarItem.Contains(",save"))
             {
