--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/report.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/report.cshtml
@@ -14,13 +14,13 @@
 </p>
 
 <div id="main" style="height:400px"></div>
-<script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
+<script src="/Scripts/echarts.js"></script>
 
 <script type="text/javascript">
     // 路径配置
     require.config({
         paths: {
-            echarts: 'http://echarts.baidu.com/build/dist'
+            echarts: '/Scripts'
         }
     });
 
