--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Problem/Index.cshtml
@@ -1,12 +1,15 @@
 ﻿@{
-    ViewBag.Title = "异常信息列表";
+    ViewBag.Title = "问题信息列表";
     Layout = "~/Areas/Admin/Views/Shared/_DataGridLayout.cshtml";
     ViewBag.GridId = "Problem";
     ViewBag.GridDataUrl = Url.Action("GridData");
     ViewBag.AddUrl = Url.Action("Add");
     ViewBag.EditUrl = Url.Action("Edit");
-    ViewBag.DeleteUrl = Url.Action("Delete"); 
-   
+    ViewBag.DeleteUrl = Url.Action("Delete");
+    ViewBag.DepartmentList = Url.Action("DepartmentList");
+    ViewBag.FactoryList = Url.Action("FactoryList");
+    ViewBag.ProblemSourceList = Url.Action("ProblemSourceList");
+    ViewBag.ProblemTypeList = Url.Action("ProblemTypeList");
 }
 @section customScript
 {
@@ -79,13 +82,13 @@
         columns = [
         [
            // { field: "Id", title: "编号", width: 40, halign: "center", align: "right", sortable: true },
-            { field: "Department", title: "部门", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, data: Department } } },
-            { field: "Factory", title: "工厂", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, data: Factory } } },
-            { field: "QuestionFrom", title: "问题来源", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, data: QuestionFrom } } },
+            { field: "Department", title: "部门", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, url: "@ViewBag.DepartmentList" } } },
+            { field: "Factory", title: "工厂", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, url: "@ViewBag.FactoryList" } } },
+            { field: "QuestionFrom", title: "问题来源", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, url: "@ViewBag.ProblemSourceList" } } },
             { field: "Detail", title: "细节", width: 150, sortable: true, editor: { type: "validatebox", options: { required: true, validType: "length[1,1000]" } } },
             { field: "Reason", title: "问题原因", width: 150, sortable: true, editor: { type: "validatebox", options: { required: true, validType: "length[1,1000]" } } },
             { field: "Solution", title: "解决方案", width: 150, sortable: true, editor: { type: "validatebox", options: { required: true, validType: "length[1,1000]" } } },
-            { field: "Type", title: "类型", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, data: ProblemType } } },
+            { field: "Type", title: "类型", width: 150, sortable: true, editor: { type: "combobox", valueField: "label", textField: "value", options: { required: true, url: "@ViewBag.ProblemTypeList" } } },
             
             { field: "Suggestion", title: "建议", width: 150, sortable: true, editor: { type: "validatebox", options: { required: true, validType: "length[1,1000]" } } },
             { field: "IsComplete", title: "是否完成", width: 80, sortable: true, formatter: formatBoolean, editor: { type: "combobox", options: { required: true, data: $.Mes.data.bool, valueField: "id", textField: "text" } } },
