--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Login.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Home/Login.cshtml
@@ -4,44 +4,76 @@
     ViewBag.Title = "View1";
 }
 
-<h2>View1</h2>
-
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, new { @class = "form-control", placeholder = "Enter your username" ,type="password" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password)
-                @Html.ValidationMessageFor(model => model.Password)
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
+<body>
+    <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+            <td>
+                <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                        <td height="561" style="background:url(/Content/Images/Login/lbg.gif)">
+                            <table width="940" border="0" align="center" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td height="238" style="background:url(/Content/Images/Login/login01.jpg)">&nbsp;</td>
+                                </tr>
+                                <tr>
+                                    <td height="190">
+                                        @using (Html.BeginForm())
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                <tr>
+                                                    <td width="208" height="190" style="background: url(/Content/Images/Login/login02.jpg)">&nbsp;</td>
+                                                    <td width="518" style="background: url(/Content/Images/Login/login03.jpg)">
+                                                        <table width="320" border="0" align="center" cellpadding="0" cellspacing="0">
+                                                            <tr>
+                                                                <td width="40" height="50"><img src="/Content/Images/Login/user.gif" width="30" height="30"></td>
+                                                                <td width="38" height="50">用户</td>
+                                                                <td width="242" height="50">
+                                                                    @Html.EditorFor(model => model.Name)
+                                                                    
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td height="50"><img src="/Content/Images/Login/password.gif" width="28" height="32"></td>
+                                                                <td height="50">密码</td>
+                                                                <td height="50">
+                                                                    @Html.EditorFor(model => model.Password)
+                                                                </td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td height="40">&nbsp;</td>
+                                                                <td height="40">&nbsp;</td>
+                                                                <td height="60">
+                                                                    <input type="image" value="Save" src="/Content/Images/Login/login.gif" />
+                                                                    
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <td width="214" style="background: url(/Content/Images/Login/login04.jpg)">&nbsp;</td>
+                                                </tr>
+                                            </table>
+                                        }
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td height="133" style="background:url(/Content/Images/Login/login05.jpg)">&nbsp;</td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
 
 
 <script src="~/Scripts/jquery-1.11.1.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script>
+    $("image_login").click(function () { $(this).hide(); });
+</script>
 
 
