增加权限过滤

--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
@@ -134,7 +134,8 @@
             if (data.Type == "Error") {
                 $.Mes.easyui.msg.error(data.Content);
             } else {
-                $.Mes.easyui.msg.tip(data.Content);
+                $.Mes.easyui.msg.tip(data || data.Content);
+                grid.datagrid("rejectChanges");
             }
         }
 
