--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
@@ -13,16 +13,16 @@
     <script src="/Scripts/plugins/datagrid-detailview.js" type="text/javascript"></script>
     <script type="text/javascript">
         var rownumbers = true, singleSelect = false, ctrlSelect = true, multiSort = false, pageSize = 25;
-        var grid, frozenColumns = [[]], columns = [[]], filterData = [], enableFilterData = true, editIndex = undefined, columnMenu = undefined;
+        var grid, frozenColumns = [[]], columns = [[]], filterData = [], enableFilterData = false, editIndex = undefined, columnMenu = undefined;
 
-        var startfunction = function () {
+        var startfunction = function() {
         };
-        var endfunction = function () {
+        var endfunction = function() {
         };
-        var addObject = function () {
+        var addObject = function() {
             return {};
         };
-        var replaceSearchField = function (field) {
+        var replaceSearchField = function(field) {
             return field;
         };
     </script>
@@ -33,7 +33,7 @@
             return '<span class="tree-file icon-' + icon + '"></span>';
         }
 
-        var addNewRow = function () {
+        var addNewRow = function() {
             if (!endEditing()) {
                 $.Mes.easyui.msg.tip("请先提交或取消正在编辑的行。");
                 return;
@@ -44,7 +44,7 @@
                 .datagrid("beginEdit", editIndex);
         };
 
-        var beginEdit = function () {
+        var beginEdit = function() {
             var row = grid.datagrid("getSelected");
             if (!row) {
                 $.Mes.easyui.msg.tip("请选择要编辑的行。");
@@ -54,8 +54,8 @@
             beginEditRow(index);
         };
 
-        var beginEditRow = function (index) {
-          
+        var beginEditRow = function(index) {
+
             var row = grid.datagrid("getSelected");
             var time = row.ProblemTime;
             $("#grid-@ViewBag.GridId").attr("test_time", time);
@@ -75,12 +75,12 @@
             }
         };
 
-        var cancelEdit = function () {
+        var cancelEdit = function() {
             grid.datagrid("rejectChanges");
             editIndex = undefined;
         };
 
-        var saveChanges = function () {
+        var saveChanges = function() {
             if (!endEditing()) {
                 return;
             }
@@ -115,31 +115,33 @@
             $.post("@ViewBag.EditUrl", { dtos: JSON.stringify(objs) }, ajaxResultHandler);
         }
 
-        var deleteRows = function () {
+        var deleteRows = function() {
             var selectRows = grid.datagrid("getSelections");
             if (selectRows.length == 0) {
                 $.Mes.easyui.msg.tip("请先选中要删除的行。");
                 return;
             }
-            var ids = $.Enumerable.From(selectRows).Select(function (m) { return m.Id; }).ToArray();
-            $.Mes.easyui.msg.confirm("是否要删除所有选中的行？此操作是不可恢复的。", null, function () {
+            var ids = $.Enumerable.From(selectRows).Select(function(m) { return m.Id; }).ToArray();
+            $.Mes.easyui.msg.confirm("是否要删除所有选中的行？此操作是不可恢复的。", null, function() {
                 $.post("@ViewBag.DeleteUrl", { ids: JSON.stringify(ids) }, ajaxResultHandler);
             });
         };
 
         function ajaxResultHandler(data) {
-            if (data.Type == "Success") {
-                grid.datagrid("reload");
-            }
-            if (data.Type == "Error") {                
-                $.Mes.easyui.msg.error(data.Content);
-            }
-            if (data.Type == "ActionAuthority") {
-                $.Mes.easyui.msg.error(data.Content);
-                grid.datagrid("rejectChanges");
-            }
-            else {
-                $.Mes.easyui.msg.tip( data.Content);               
+            switch (data.Type) {
+                case "Success":
+                    $.Mes.easyui.msg.tip(data.Content);
+                    grid.datagrid("reload");
+                    break;
+                case "Error":
+                    $.Mes.easyui.msg.error(data.Content);
+                    break;
+                case "ActionAuthority":
+                    $.Mes.easyui.msg.error(data.Content);
+                    grid.datagrid("rejectChanges");
+                    break;
+                default:
+                    $.Mes.easyui.msg.tip(data.Content);
             }
         }
 
@@ -150,7 +152,7 @@
             }
             @if (toolbarItem.Contains("edit"))
             {
-            <text>
+                <text>
             { text: "编辑", iconCls: "icon-edit", handler: beginEdit },
             "-",
             </text>
@@ -174,7 +176,7 @@
     </script>
     @RenderSection("customScript", true)
     <script type="text/javascript">
-        $(function () {
+        $(function() {
             startfunction();
 
             grid = $("#grid-@ViewBag.GridId").datagrid({
@@ -204,7 +206,7 @@
             if (enableFilterData) {
                 grid.datagrid("enableFilter", filterData);
             }
-            
+
             endfunction();
         });
 
@@ -220,7 +222,7 @@
         function createColumnMenu() {
             columnMenu = $("<div/>").appendTo("body");
             columnMenu.menu({
-                onClick: function (item) {
+                onClick: function(item) {
                     if (item.iconCls == "icon-checkmark") {
                         grid.datagrid("hideColumn", item.name);
                         columnMenu.menu("setIcon", { target: item.target, iconCls: "icon-checknomark" });
