--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
 </head>
 <body>
     @RenderBody()
-    <script src="/Scripts/jquery-1.11.1.js" type="text/javascript"></script>
-    <script src="/Scripts/jquery.easyui-1.4.1.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="/Scripts/jquery.easyui.min-1.4.1.js" type="text/javascript"></script>
     <script src="/Scripts/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
     <script src="/Scripts/jquery.linq.js" type="text/javascript"></script>
     <script src="/Scripts/json2.js" type="text/javascript"></script>
