--- a/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
+++ b/MesSharp/samples/OSharp.Demo.Web/Areas/Admin/Views/Shared/_DataGridLayout.cshtml
@@ -140,6 +140,10 @@
                     $.Mes.easyui.msg.error(data.Content);
                     grid.datagrid("rejectChanges");
                     break;
+                case "TimeOut":
+                    $.Mes.easyui.msg.error(data.Content);
+                    grid.datagrid("rejectChanges");
+                    break;
                 default:
                     $.Mes.easyui.msg.tip(data.Content);
             }
